Fix scrollbar returning to top after loading proposals (#2502)

--- a/app/components/views/GovernancePage/Proposals/ProposalsList/ProposalsList.module.css
+++ b/app/components/views/GovernancePage/Proposals/ProposalsList/ProposalsList.module.css
@@ -1,6 +1,14 @@
 .loadingPage {
   width: 100%;
   text-align: center;
+  position: sticky;
+  bottom: 0;
+  display: flex;
+  flex-direction: row;
+  justify-content: center;
+  align-items: center;
+  height: 100%;
+  background-color: var(--background-container);
 }
 
 .proposalList {
